force-app/main/default/objects/OS_ASPList__mdt/OS_ASPList__mdt.object-meta.xml
<CustomObject>
    <label>OS_ASPList</label>
    <pluralLabel>OS_ASPLists</pluralLabel>
</CustomObject>