force-app/main/default/objects/OS_ASPList__mdt/fields/ABC_SC_HV_or_LV_ABC_Installation__c.field-meta.xml
<CustomField>
    <fullName>ABC_SC_HV_or_LV_ABC_Installation__c</fullName>
    <label>(ABC/SC) HV &amp; or LV ABC Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>