force-app/main/default/objects/OS_ASPList__mdt/fields/AusNet_Services_Accreditation_ID_No_EVN__c.field-meta.xml
<CustomField>
    <fullName>AusNet_Services_Accreditation_ID_No_EVN__c</fullName>
    <description>Changed to text from Number to resolve data issue in Prod</description>
    <label>AusNet Services Accreditation ID No. EVN</label>
    <length>8</length>
    <type>Text</type>
</CustomField>