force-app/main/default/objects/OS_ASPList__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Design</fullName>
                <default>true</default>
                <label>External Design</label>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>External Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>