force-app/main/default/objects/OS_ASPList__mdt/fields/CH_Cable_Hauling__c.field-meta.xml
<CustomField>
    <fullName>CH_Cable_Hauling__c</fullName>
    <label>(CH) Cable Hauling</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>