force-app/main/default/objects/OS_ASPList__mdt/fields/COMM_GB_Communication_Ground_Based_I__c.field-meta.xml
<CustomField>
    <fullName>COMM_GB_Communication_Ground_Based_I__c</fullName>
    <label>COMM-GB) Communication Ground Based – I</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>