force-app/main/default/objects/OS_ASPList__mdt/fields/COMM_TA_Communication_Tower_Access_I__c.field-meta.xml
<CustomField>
    <fullName>COMM_TA_Communication_Tower_Access_I__c</fullName>
    <label>(COMM-TA) Communication Tower Access – I</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>