force-app/main/default/objects/OS_ASPList__mdt/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <label>Contact Details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>