force-app/main/default/objects/OS_ASPList__mdt/fields/DR_Drafting__c.field-meta.xml
<CustomField>
    <fullName>DR_Drafting__c</fullName>
    <label>(DR) Drafting</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>