force-app/main/default/objects/OS_ASPList__mdt/fields/ED_Detailing__c.field-meta.xml
<CustomField>
    <fullName>ED_Detailing__c</fullName>
    <label>(ED) Detailing</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>