force-app/main/default/objects/OS_ASPList__mdt/fields/EDB_Design_Basic__c.field-meta.xml
<CustomField>
    <fullName>EDB_Design_Basic__c</fullName>
    <label>(EDB) Design Basic</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>