force-app/main/default/objects/OS_ASPList__mdt/fields/EDC_Design_Complex__c.field-meta.xml
<CustomField>
    <fullName>EDC_Design_Complex__c</fullName>
    <label>(EDC) Design Complex</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>