force-app/main/default/objects/OS_ASPList__mdt/fields/FO_Fibre_Optic_Installation_and_Jointi__c.field-meta.xml
<CustomField>
    <fullName>FO_Fibre_Optic_Installation_and_Jointi__c</fullName>
    <label>(FO) Fibre Optic Installation and Jointi</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>