force-app/main/default/objects/OS_ASPList__mdt/fields/G_T_SS_Substation_Cons_Ground__c.field-meta.xml
<CustomField>
    <fullName>G_T_SS_Substation_Cons_Ground__c</fullName>
    <label>(G/T SS) Substation Cons - Ground</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>