force-app/main/default/objects/OS_ASPList__mdt/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMB</fullName>
            </value>
            <value>
                <fullName>PMC</fullName>
            </value>
            <value>
                <fullName>PMB PMC</fullName>
            </value>
            <value>
                <fullName>PMC &amp; PMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>