force-app/main/default/objects/OS_ASPList__mdt/fields/HV_LV_OH_Overhead_Construction__c.field-meta.xml
<CustomField>
    <fullName>HV_LV_OH_Overhead_Construction__c</fullName>
    <label>(HV/LV OH) Overhead Construction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>