force-app/main/default/objects/OS_ASPList__mdt/fields/HV_LW_HV_Live_Work__c.field-meta.xml
<CustomField>
    <fullName>HV_LW_HV_Live_Work__c</fullName>
    <label>(HV /LW) HV Live Work</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>