force-app/main/default/objects/OS_ASPList__mdt/fields/HVUG_HV_Underground_Installation__c.field-meta.xml
<CustomField>
    <fullName>HVUG_HV_Underground_Installation__c</fullName>
    <label>(HVUG) HV Underground Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>