force-app/main/default/objects/OS_ASPList__mdt/fields/I_D_SS_Indoor_Substation_Cons__c.field-meta.xml
<CustomField>
    <fullName>I_D_SS_Indoor_Substation_Cons__c</fullName>
    <label>(I/D SS) Indoor Substation Cons -</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>