force-app/main/default/objects/OS_ASPList__mdt/fields/K_P_SS_Kiosk_Padmount_Cons__c.field-meta.xml
<CustomField>
    <fullName>K_P_SS_Kiosk_Padmount_Cons__c</fullName>
    <label>(K&amp;P SS) Kiosk &amp; Padmount Cons</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>