force-app/main/default/objects/OS_ASPList__mdt/fields/LVUG_LV_Underground_Installation__c.field-meta.xml
<CustomField>
    <fullName>LVUG_LV_Underground_Installation__c</fullName>
    <label>(LVUG) LV Underground Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>