force-app/main/default/objects/OS_ASPList__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>