force-app/main/default/objects/OS_ASPList__mdt/fields/OHS_LV_OH_Service_Installation__c.field-meta.xml
<CustomField>
    <fullName>OHS_LV_OH_Service_Installation__c</fullName>
    <label>(OHS) LV OH Service Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>