force-app/main/default/objects/OS_ASPList__mdt/fields/PH1__c.field-meta.xml
<CustomField>
    <fullName>PH1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PH1</label>
    <type>Checkbox</type>
</CustomField>