force-app/main/default/objects/OS_ASPList__mdt/fields/PH2__c.field-meta.xml
<CustomField>
    <fullName>PH2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PH2</label>
    <type>Checkbox</type>
</CustomField>