force-app/main/default/objects/OS_ASPList__mdt/fields/PH3__c.field-meta.xml
<CustomField>
    <fullName>PH3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PH3</label>
    <type>Checkbox</type>
</CustomField>