force-app/main/default/objects/OS_ASPList__mdt/fields/PL_Public_Lighting_Bulk_Light_Replac__c.field-meta.xml
<CustomField>
    <fullName>PL_Public_Lighting_Bulk_Light_Replac__c</fullName>
    <label>(PL) Public Lighting (Bulk Light Replac</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>