force-app/main/default/objects/OS_ASPList__mdt/fields/PLD_Design_Public_Lighting__c.field-meta.xml
<CustomField>
    <fullName>PLD_Design_Public_Lighting__c</fullName>
    <label>(PLD) Design Public Lighting</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>