force-app/main/default/objects/OS_ASPList__mdt/fields/PLD_L_Public_Lighting_Design_Luminar__c.field-meta.xml
<CustomField>
    <fullName>PLD_L_Public_Lighting_Design_Luminar__c</fullName>
    <label>(PLD-L) Public Lighting Design – Luminar</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>