force-app/main/default/objects/OS_ASPList__mdt/fields/PS_Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>PS_Professional_Services__c</fullName>
    <label>(PS) Professional Services</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>