force-app/main/default/objects/OS_ASPList__mdt/fields/SBI_Sign_and_Banner_Installation__c.field-meta.xml
<CustomField>
    <fullName>SBI_Sign_and_Banner_Installation__c</fullName>
    <label>(SBI) Sign and Banner Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>