force-app/main/default/objects/OS_ASPList__mdt/fields/SV_Survey__c.field-meta.xml
<CustomField>
    <fullName>SV_Survey__c</fullName>
    <label>(SV) Survey</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>