force-app/main/default/objects/OS_ASPList__mdt/fields/UGC_U_G_Pit_Pipe_trenching_cables__c.field-meta.xml
<CustomField>
    <fullName>UGC_U_G_Pit_Pipe_trenching_cables__c</fullName>
    <label>(UGC) U/G Pit, Pipe, trenching, cables,</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>