force-app/main/default/objects/OS_ASPList__mdt/fields/UGS_LV_U_G_Service_Installation__c.field-meta.xml
<CustomField>
    <fullName>UGS_LV_U_G_Service_Installation__c</fullName>
    <label>(UGS) LV U/G Service Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>