force-app/main/default/objects/OS_ASPList__mdt/fields/VEDN_Accreditation_ID_No__c.field-meta.xml
<CustomField>
    <fullName>VEDN_Accreditation_ID_No__c</fullName>
    <label>VEDN Accreditation ID No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>