force-app/main/default/objects/OS_ASPList__mdt/fields/X1002__c.field-meta.xml
<CustomField>
    <fullName>X1002__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1002</label>
    <type>Checkbox</type>
</CustomField>