force-app/main/default/objects/OS_ASPList__mdt/fields/X1012__c.field-meta.xml
<CustomField>
    <fullName>X1012__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1012</label>
    <type>Checkbox</type>
</CustomField>