force-app/main/default/objects/OS_ASPList__mdt/fields/X1013__c.field-meta.xml
<CustomField>
    <fullName>X1013__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1013</label>
    <type>Checkbox</type>
</CustomField>